<resources>
    <string name="app_name">Laboratoire3</string>
    <string name="ouvrir_desc">Ouvrir</string>
    <string name="fermer_desc">Fermer</string>

    <string name="saison">Saison</string>
    <string name="type">Type</string>
    <string name="couleur">Couleur</string>
    <string name="categorie">Categorie</string>
    <string name="aucun_resultat">Aucun résultat.</string>

    <!-- Navigation Menu -->
    <string name="navAccueil">Accueil</string>
    <string name="navEnsemble">Ensemble actuel</string>
    <string name="navAjouter">Ajouter un article</string>
    <string name="navEnsembles">Mes Ensembles</string>
    <string name="navLister">Lister par</string>
    <string name="navTous">Tous</string>
    <string name="navFavoris">Mes Favoris</string>
    <string name="navPlusRecent">Plus Récents</string>
    <string name="navPlusPorte">Plus Portés</string>

    <string name="navReglages">Réglages</string>
    <string name="navStyle">Règles de style</string>

    <!-- Saisons -->
    <string-array name="saisons">
        <item>Printemps</item>
        <item>Été</item>
        <item>Automne</item>
        <item>Hiver</item>
    </string-array>
</resources>
